# Sovereignty-Stack

./: .gitignore  .gitmodules  README.md
concepts/: README.html  README.md
concepts/architecture/: 08_l1_sahara_node.md  09_l2_elysium_backbone.md  10_l2_l3_commodity_rollups.md  11_l3_l4_nano_rollups.md  README.md
concepts/banking-physicalization/: 22_crypto_native_cash.md  23_deiban_deswift.md  24_vibe_collateralized_bonds.md  25_geographic_daos.md  26_poge_oracles.md  27_grid_stabilization.md  28_hardware_lifecycle_dao.md  README.md
concepts/identity-governance/: 16_siwe_oidc_bridge.md  17_tinymeritrank.md  18_3factor_auth.md  19_miner_dao.md  20_dsla.md  21_maintenance_shift.md  README.md
concepts/inter-dao/: 33_inter_dao_escrow.md  34_veto_dashboard.md  35_social_slag_archive.md  54_sovereignty_stack_dao.md  README.md
concepts/market-dynamics/: 29_l2_diversity_scorecards.md  30_prover_as_a_service.md  31_cross_domain_intent_mempools.md  32_tee_builders.md  README.md
concepts/marketing/: README.md
concepts/monetary-policy/: 05_beyond_sound_money.md  06_velotile_assets.md  07_elastic_supply.md  README.md
concepts/oracles/: 12_heartbeat_oracles.md  README.md  (+1 more)
docs/: README.md
hardware/: README.md
software/: README.md
software/identity-worker/: Cargo.toml  Containerfile  README.md  docker-compose.yml  run_sandbox.sh  trace_verifier.sh
software/identity-worker/src/: lib.rs
software/identity-worker/tests/: cucumber_test.rs
software/identity-worker/tests/integration/: test_dao_mechanics.py  test_recovery.py
tools/: README.md  readme-config.yaml
(+146 files in other folders)
