[package]
name = "sovereign-identity-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# State machine framework
statig = "0.2"
# Verifiable Secret Sharing (VSSS) & Threshold Cryptography mock
threshold_crypto = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# BDD testing framework
cucumber = "0.20"
tokio = { version = "1.30", features = ["macros", "rt-multi-thread", "time"] }
